Some refactoring and hideing horizontal overflow to avoid scrollbar appearing on route transitions

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -17,4 +17,5 @@ src: url('/assets/fonts/montserrat/Montserrat-Medium.ttf')  format('truetype')
 body {
   margin: 0;
   font-family: RobotoMono, sans-serif;
+  overflow-x: hidden;
 }
